--- a/part2.ipynb
+++ b/part2.ipynb
@@ -844,7 +844,7 @@
    },
    "outputs": [],
    "source": [
-    "# As you can see Taiwanese comrads were right, despite poor explanation, their algorithm works well"
+    "# As you can see Taiwanese comrads were right, despite tricky explanation, their algorithm works well"
    ]
   }
  ],
